resize images; fix gif overflow

--- a/css/style.css
+++ b/css/style.css
@@ -281,16 +281,11 @@ body{
   }
 }*/
 
-.proj-cell {
-  justify-self: center;
-  /*background-color: blue;*/
+.wrapper {
   position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: auto;
+  height: 50%;
+  text-align: center;
 }
-
-
 
 .proj-underlay {
   position: absolute;
@@ -302,19 +297,13 @@ body{
   color: white;
   z-index: 2;
   padding: 2vw 5vw 2vh 5vw;
-  font-size: 1px;
+  font-size: 12px;
   vertical-align: middle;
 }
 
 .proj-underlay-text {
   text-align: justify;
   text-justify: inter-word;
-}
-
-.wrapper {
-  position: relative;
-  height: 50%;
-  text-align: center;
 }
 
 .proj-pic {
@@ -327,7 +316,7 @@ body{
   padding-bottom: 0;
   padding: 0;
   margin: 0;
-  aspect-ratio: 1.62;
+  aspect-ratio: 1.73;
 }
 
 /* Mobile -  Hover not possible. Make opacity 0 */
@@ -338,12 +327,12 @@ body{
 
 .proj-gif {
   position: absolute;
-  width: 100%;
-  height: auto;
+  width: auto;
+  height: 100%;
   z-index: 0;
   top: 0;
   left: 0;
-  aspect-ratio: 1.62;
+  aspect-ratio: 1.73;
 }
 
 .center {
